feat: Moved archives to catalog API
